feat: add aiservice interface