@@ -1,10 +1,13 @@
 package org.buildcli.commands.project;
 
 import org.buildcli.domain.BuildCLICommand;
-import org.buildcli.utils.CodeDocumenter;
+import org.buildcli.utils.filesystem.FindFilesUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import picocli.CommandLine.Command;
 import picocli.CommandLine.Parameters;
 
+import java.io.File;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
@@ -12,7 +15,8 @@ import java.util.concurrent.Executors;
 
 @Command(name = "document-code", aliases = {"docs"}, description = "", mixinStandardHelpOptions = true)
 public class DocumentCodeCommand implements BuildCLICommand {
-  private final ExecutorService executorService = Executors.newCachedThreadPool();
+  private final ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
+  private final Logger logger = LoggerFactory.getLogger("DocumentCodeCommand");
 
   @Parameters
   private List<String> files;
@@ -23,13 +27,25 @@ public class DocumentCodeCommand implements BuildCLICommand {
       return;
     }
 
-    var execsAsync = new CompletableFuture[files.size()];
+    var targetFiles = files.parallelStream()
+        .map(File::new)
+        .map(FindFilesUtils::searchJavaFiles)
+        .flatMap(List::stream)
+        .toList();
 
-    for (int i = 0; i < files.size(); i++) {
-      final var finalI = i;
-      execsAsync[i] = CompletableFuture.runAsync(() -> {
-        CodeDocumenter.getDocumentationFromOllama(files.get(finalI));
-      }, executorService);
+    var execsAsync = new CompletableFuture[targetFiles.size()];
+
+    for (int i = 0; i < targetFiles.size(); i++) {
+      int finalI = i;
+      execsAsync[i] = CompletableFuture.supplyAsync(() -> "")
+          .thenAccept(s -> {
+          })
+          .exceptionally(throwable -> {
+            var message = "Occurred an error when try comment code, file: %s".formatted(targetFiles.get(finalI));
+            logger.error(message, throwable);
+
+            return null;
+          });
     }
 
     CompletableFuture.allOf(execsAsync).join();
